feat: add Redis caching for transactions with per-user key, fix LocalDateTime serialization in Redis ObjectMapper